# published_record_conversation

./: README.md  invenio.cfg
site/: setup.cfg
site/instance-name/: records.py
templates/semantic-ui/invenio_app_rdm/records/: detail.html  record_content.html
templates/semantic-ui/invenio_requests/details/: conversation_index.html
