
[metadata]
name = inveniordm-v12

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    inveniordm_v12_views = inveniordm_v12.views:create_blueprint
invenio_assets.webpack =
    inveniordm_v12_theme = inveniordm_v12.webpack:theme


invenio_base.apps =
     inveniordm_v12_records  = inveniordm_v12.records:register_filters
#    <instance-name>_records = <instance-name>.records:register_filters

